--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             position: relative;
             overflow: hidden;
             background-color: #222831; 
+            overflow : scroll;
         }
 
         * {
